Enhance AMS with tmux session management: add attach, create, and kill functionalities; update command structure and error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "ams"
 version = "0.1.0"
 edition = "2021"
+description = "Agents Manager Service - Manage AI coding agent tmux sessions"
+authors = ["Ofek"]
+license = "MIT"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
